# Image-Formatter

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: DarkenOperation.cpp.AFC56375E3C73252.idx  DarkenOperation.hpp.6220B8556FE1FF3B.idx  GetRandomValue.hpp.4D13FD01CA161009.idx  Image.cpp.F95C8932B41BF929.idx  Image.hpp.F0F79AD10C6C03BE.idx  ImageOperation.hpp.94DBDDF40FF9BA30.idx  InvertOperation.cpp.DA74802E01903370.idx  InvertOperation.hpp.5A0B9B4804F35F3A.idx  OperationEnforceInterface.hpp.D211FD1477F16D4E.idx  OperationPipeline.cpp.E39C89AAFA7CBA0E.idx  OperationPipeline.hpp.0E86C83F2C00793B.idx  ReflectHorizontallyOperation.cpp.8A607763B098BF04.idx  ReflectHorizontallyOperation.hpp.1C149EB592548F6E.idx  ReflectVerticallyOperation.cpp.6D25D277856FAECD.idx  ReflectVerticallyOperation.hpp.F29C2B8071FF442A.idx  Rotate90DegreesClockwiseOperation.cpp.5BC91D7E23856665.idx  Rotate90DegreesClockwiseOperation.hpp.A48312D641CD6850.idx  Rotate90DegreesCounterclockwiseOperation.cpp.C204A40BFC0D5C9E.idx  Rotate90DegreesCounterclockwiseOperation.hpp.3F814088B7167573.idx  RotateOperation.cpp.001E4C55071F95EE.idx  RotateOperation.hpp.F9F38A3AAF33753C.idx  SobelOperatorOperation.cpp.B26BB4AC64AFE4AC.idx  SobelOperatorOperation.hpp.B4C134B4D62D1F9F.idx  SteganographyDecodeOperation.cpp.1F049AF91A8A8751.idx  SteganographyDecodeOperation.hpp.0E05EE9287F2E841.idx  SteganographyEncodeOperation.cpp.806F24AA49C7FC70.idx  SteganographyEncodeOperation.hpp.61E7775F007AFD05.idx  StringToBinary.hpp.CE1FDBEE0290961C.idx  cxxopts.hpp.2AB298C7DEE67787.idx  full_scenario_test.cpp.38FB91517FE2B582.idx  gmock-actions.h.B739E2F46FE89C42.idx  gmock-all.cc.BBE66714A1B70936.idx  gmock-cardinalities.cc.5DF2A598A68DA759.idx  gmock-cardinalities.h.2D4536BF285441FE.idx  gmock-function-mocker.h.AD16D0B392DA8FB0.idx  gmock-generated-actions.h.AEEEBDB89BE49F6D.idx  gmock-internal-utils.cc.E0A3473B0BBE2130.idx  gmock-internal-utils.h.4D7BB9C2B3158C49.idx  gmock-matchers.cc.9F5F5D63920F252F.idx  gmock-matchers.h.52EF8C57CEFD86C8.idx  (+50 more)
include/helper/: BinaryToString.hpp  GetRandomValue.hpp  StringToBinary.hpp
include/imageformatter/: DarkenOperation.hpp  Image.hpp  ImageOperation.hpp  InvertOperation.hpp  OperationEnforceInterface.hpp  OperationPipeline.hpp  ReflectHorizontallyOperation.hpp  ReflectVerticallyOperation.hpp  Rotate90DegreesClockwiseOperation.hpp  Rotate90DegreesCounterclockwiseOperation.hpp  RotateOperation.hpp  SobelOperatorOperation.hpp  SteganographyDecodeOperation.hpp  SteganographyEncodeOperation.hpp
src/: Image.cpp  main.cpp
src/headers/: .image.cpp.swp  image.cpp  image.hpp
src/operations/: DarkenOperation.cpp  DownscaleOperation.cpp  GrayscaleOperation.cpp  ImageToASCIIOperation.cpp  InvertOperation.cpp  OperationPipeline.cpp  ReflectHorizontallyOperation.cpp  ReflectVerticallyOperation.cpp  Rotate90DegreesClockwiseOperation.cpp  Rotate90DegreesCounterclockwiseOperation.cpp  RotateOperation.cpp  SobelOperatorOperation.cpp  SteganographyDecodeOperation.cpp  SteganographyEncodeOperation.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  ImageFormatter_Tests[1]_include.cmake  Makefile  cmake_install.cmake  full_scenario_test.cpp
